--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,11 @@
     <string name="skills">Skills</string>
     <string name="ratings">Star Ratings</string>
     <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
+    <string name="edit">Edit</string>
+    <string name="content_description_search">Edit icon</string>
+    <string name="favorite">favorite</string>
+    <string name="content_description_favorite">favorite icon</string>
+    <string name="more">More</string>
+    <string name="content_description_more">More icon</string>
 
 </resources>
